# whisperx-transcriber

./: .gitignore  LICENSE  README.md  config.example.json  install.sh  pyproject.toml  system_audio.py  transcribe  transcriber.py  ui.py  uninstall.sh
docs/: EVAL_HARNESS_PLAN.md  STEREO_PIPELINE_PLAN.md  UI_OVERHAUL_PLAN.md
