[project]
name = "interview-transcriber"
version = "1.0.0"
description = "Record interviews, transcribe with speaker diarization, save to Obsidian"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "whisperx>=3.8",
    "sounddevice>=0.5",
    "soundfile>=0.13",
    "numpy>=2.1",
]

[project.scripts]
transcribe = "transcriber:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
