[project]
name = "local-transcriber"
version = "1.0.0"
description = "Record and transcribe audio with speaker diarization"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mlx-audio>=0.4",
    "mlx-whisper>=0.4",
    "sounddevice>=0.5",
    "soundfile>=0.13",
    "numpy>=2.1",
    "rich>=13.0",
    "psutil>=5.9",
    "pyobjc-framework-ScreenCaptureKit>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
transcribe = "transcriber:main"

[tool.setuptools]
py-modules = ["transcriber", "ui", "system_audio"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
